5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1758_1189.log
== SUBMITION (2019-05-29 22:08:20) 
-- CODE:
from numpy import*
s=array(eval(input("x: ")))
new=s.replace(" "," ")
inv=" "
i=-1
while (i>=-len(new)):
	inv=inv+1
print(new.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.59687
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 2, in <module>
    s=array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'ACARARAJADADAJARARACA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:09:54) 
-- CODE:
from numpy import*
s=array(eval(input("x: ")))
new=s.replace(" "," ")
inv=""
i=-1
while (i>=-len(new)):
	inv=inv+1
print(new.upper())
if inv==new[1:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.17073
-- ERROR:
  File "/home/codebench/codes/1758/1189/main.py", line 11
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:09:57) 
-- CODE:
from numpy import*
s=array(eval(input("x: ")))
new=s.replace(" "," ")
inv=""
i=-1
while (i>=-len(new)):
	inv=inv+1
print(new.upper())
if inv==new[1:
	print(1)
else:
	print(0)
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:11:41) 
-- CODE:
from numpy import*
s=array(eval(input("x: ")))
new=s.replace(" "," ")
inv=""
i=-1
while (i>=-len(new)):
	inv=inv+new[i]
	i -=1
print(new.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:11:46) 
-- CODE:
from numpy import*
s=array(eval(input("x: ")))
new=s.replace(" "," ")
inv=""
i=-1
while (i>=-len(new)):
	inv=inv+new[i]
	i -=1
print(new.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.520298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 2, in <module>
    s=array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'ACARARAJADADAJARARACA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:11:58) 
-- CODE:
from numpy import*
s=array(eval(input("x: ")))
new=s.replace(" "," ")
inv=""
i=-1
while (i>=-len(new)):
	inv=inv+new[i]
	i -=1
print(new.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:12:30) 
-- CODE:
from numpy import*
s=input("x: ")
new=s.replace(" "," ")
inv=""
i=-1
while (i>=-len(new)):
	inv=inv+new[i]
	i -=1
print(new.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.473751
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
